# rememepy

./: .gitignore  LICENSE  README.md  pyproject.toml
rememepy/: __init__.py  substitution.py  supporting_functions.py
